--- a/easy-rocket-starter/build.gradle
+++ b/easy-rocket-starter/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+  id 'java'
   id 'org.springframework.boot' version '2.7.0'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'java'
 }
 
 group 'easy.rocket'
@@ -26,6 +26,6 @@ dependencies {
   testImplementation 'com.google.guava:guava:31.1-jre'
 }
 
-test {
+tasks.named('test') {
   useJUnitPlatform()
 }
