fix name srv addr

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.banner-mode=off
 
-user.ip=10.251.50.45
-rocketmq.name-srv-addr=${user.ip}:9876
+user.ip=10.251.50.45:9876
+rocketmq.name-srv-addr=${user.name_srv}
 rocketmq.env=dev
 rocketmq.producer-group=dev
 #rocketmq.name-space=rocket_test
