--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,34 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.0'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+  id 'org.springframework.boot' version '2.7.0' apply false
+  id 'io.spring.dependency-management' version '1.0.11.RELEASE' apply false
+  id 'java'
 }
 
-group = 'easy.rocket'
-version = '0.0.1-SNAPSHOT'
+repositories {
+  mavenCentral()
+}
+
 sourceCompatibility = '11'
 
-repositories {
+subprojects {
+  apply plugin: 'java'
+  apply plugin: 'org.springframework.boot'
+  apply plugin: 'io.spring.dependency-management'
+
+  group = 'easy.rocket'
+  version = '0.0.1-SNAPSHOT'
+
+  repositories {
     mavenCentral()
+  }
+
+  dependencyManagement {
+    imports {
+      mavenBom 'org.apache.rocketmq:rocketmq-client:4.9.4'
+    }
+  }
 }
 
 tasks.named('test') {
-    useJUnitPlatform()
+  useJUnitPlatform()
 }
