--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.main.banner-mode=off
 
-user.ip=10.251.50.45:9876
+user.name_srv=192.168.10.150:9876
 rocketmq.name-srv-addr=${user.name_srv}
 rocketmq.env=dev
 rocketmq.producer-group=dev
+
 #rocketmq.name-space=rocket_test
 rocketmq.producer.normal=true
 rocketmq.producer.order=true
+
+#rocketmq.listener=true
 rocketmq.transactional.listener=true
+
 rocketmq.log.fall.back=true
