--- a/demo-consumer/src/main/resources/application.properties
+++ b/demo-consumer/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.main.banner-mode=off
 
-user.name_srv=192.168.10.150:9876
+user.name_srv=10.251.50.45:9876
 rocketmq.name-srv-addr=${user.name_srv}
 rocketmq.env=dev
 rocketmq.producer-group=dev
+
+# log back [%X{tid}} support trance id
+logging.pattern.console=${CONSOLE_LOG_PATTERN:%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p [%X{tid}}) %clr(${PID:- }){magenta} %clr(---){faint} %clr(%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}}
