need add properties check

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.main.banner-mode=off
 user.name_srv=192.168.10.150:9876
 rocketmq.name-srv-addr=${user.name_srv}
 rocketmq.env=dev
-rocketmq.producer-group=dev
+#rocketmq.producer-group=dev
 
 #rocketmq.name-space=rocket_test
 rocketmq.producer.normal=true
