--- a/easy-rocket-starter/build.gradle
+++ b/easy-rocket-starter/build.gradle
@@ -5,7 +5,7 @@ plugins {
   id 'maven-publish'
 }
 
-group 'easy.rocket'
+group = 'like.ai'
 version '0.0.1-SNAPSHOT'
 
 repositories {
@@ -16,19 +16,15 @@ dependencies {
   compileOnly 'org.springframework.boot:spring-boot-starter'
   compileOnly 'org.springframework.boot:spring-boot-starter-json'
   compileOnly 'org.springframework:spring-tx'
-  compileOnly 'org.apache.rocketmq:rocketmq-client:4.9.4'
+  compileOnly 'org.apache.rocketmq:rocketmq-client'
 
   implementation 'com.google.guava:guava:31.1-jre'
 
   // for test
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.springframework.boot:spring-boot-starter-json'
-  testImplementation 'org.apache.rocketmq:rocketmq-client:4.9.4'
+  testImplementation 'org.apache.rocketmq:rocketmq-client'
   testImplementation 'com.google.guava:guava:31.1-jre'
-}
-
-tasks.named('test') {
-  useJUnitPlatform()
 }
 
 task sourceJar(type: Jar) {
