--- a/easy-rocket-starter/build.gradle
+++ b/easy-rocket-starter/build.gradle
@@ -16,14 +16,14 @@ dependencies {
   compileOnly 'org.springframework.boot:spring-boot-starter'
   compileOnly 'org.springframework.boot:spring-boot-starter-json'
   compileOnly 'org.springframework:spring-tx'
-  compileOnly 'org.apache.rocketmq:rocketmq-client'
+  compileOnly 'org.apache.rocketmq:rocketmq-client:5.0.0'
 
   implementation 'com.google.guava:guava:31.1-jre'
 
   // for test
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.springframework.boot:spring-boot-starter-json'
-  testImplementation 'org.apache.rocketmq:rocketmq-client'
+  testImplementation 'org.apache.rocketmq:rocketmq-client:5.0.0'
   testImplementation 'com.google.guava:guava:31.1-jre'
 }
 
